[metadata]
name = ctmm
version = 1.0.0
author = MinhuiC
author_email = minhuic@uchicago.edu
description = Cell Type-specific linear Mixed Models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Minhui-Chen/CTMM
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy
    scipy
    pandas
    rpy2
